syntax = "proto3";

package index;
option go_package = "github.com/pachyderm/pachyderm/v2/src/internal/storage/fileset/index";

import "internal/storage/chunk/chunk.proto";

// Index stores an index to and metadata about a file.
message Index {
  string path = 1;
  Range range = 2;
  File file = 3;
  int64 num_files = 4;
  int64 size_bytes = 5;
}

message Range {
  int64 offset = 1;
  string last_path = 2;
  chunk.DataRef chunk_ref = 3;
}

message File {
  string datum = 1;
  repeated chunk.DataRef data_refs = 2;
}
